samples/_failures_safe/1761255249_f440ff_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c8d93a3f.c: In function ‘main’:
./samples/SAFE/__tmp_c8d93a3f.c:165:13: error: ‘dist’ undeclared (first use in this function)
  165 |         if (dist
      |             ^~~~
./samples/SAFE/__tmp_c8d93a3f.c:165:13: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_c8d93a3f.c:165:17: error: expected ‘)’ at end of input
  165 |         if (dist
      |            ~    ^
      |                 )
./samples/SAFE/__tmp_c8d93a3f.c:165:9: error: expected declaration or statement at end of input
  165 |         if (dist
      |         ^~
./samples/SAFE/__tmp_c8d93a3f.c:165:9: error: expected declaration or statement at end of input
